# open-ai-api-integration

./: README.md  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  config.py  routes.py  run.py  socket_events.py
app/models/: user.py
app/services/: auth_service.py  openai.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html  index2.html
openai_websocket/: server.py
